--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,6 @@
 
        # Runs a set of commands using the runners shell
        - name: Swift test
-         run: for d in ./*/ ; do (cd "$d" && swift test --enable-test-discovery --enable-code-coverage && cd ..); done
-       - uses: mattpolzin/swift-codecov-action@0.6.0
-         with:
-             MINIMUM_COVERAGE: 100
+         run: for d in ./*/ ; do (cd "$d" && swift test && cd ..); done
+
 
