--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,10 @@
 
        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
        - uses: actions/checkout@v2
-
+       - name: Run Script
+         run: python3 .script/main.py
        # Runs a set of commands using the runners shell
-       - name: Swift test
+       - name: Swift Test
          run: for d in ./*/ ; do (cd "$d" && swift test && cd ..); done
 
 
